# docs/swagger.yaml
@@ -168,10 +168,6 @@ definitions:
         type: string
       position:
         type: string
-      room:
-        items:
-          $ref: '#/definitions/main.Room'
-        type: array
       sex:
         type: string
       updatedAt:
@@ -696,6 +692,38 @@ paths:
           schema:
             $ref: '#/definitions/main.Partner'
       summary: Get Partner View
+      tags:
+      - partners
+  /partnersexcel:
+    get:
+      responses:
+        "200": {}
+      summary: All Partners Paged excel
+      tags:
+      - partners
+  /partnerspaged:
+    get:
+      parameters:
+      - description: Page no
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: Items per page
+        in: query
+        name: perPage
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/main.Partner'
+            type: array
+      summary: All Partners Paged
       tags:
       - partners
   /partnersregister:
